# mangaba-ai-desktop-mac-win

./: .gitignore  CHANGELOG.md  DESKTOP_SETUP.md  Modelfile.mangaba  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  publicar-release.sh  pyproject.toml  start-desktop.sh
.github/: pull_request_template.md
backend/open_webui/: __init__.py  config.py  constants.py  env.py  main.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/retrieval/loaders/: external_web.py
backend/open_webui/retrieval/vector/: async_client.py
backend/open_webui/retrieval/web/: azure.py  external.py  searxng.py  yacy.py  yandex.py
backend/open_webui/routers/: audio.py  openai.py  scim.py
backend/open_webui/static/: opensearch.xml
backend/open_webui/static/themes/: mangaba.css
backend/open_webui/tools/: __init__.py  builtin.py
backend/open_webui/utils/: asgi_middleware.py  automations.py  oauth.py
backend/open_webui/utils/telemetry/: metrics.py
docs/: SECURITY.md
docs/branding/: BRANDING.md
electron/: loading.html  main.cjs  main.js  ollama-manager.cjs  preload.cjs
scripts/: gen-logos.js  gerar-branding-pdf.py  gerar-software-pdf.py  slim-runtime.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: constants.ts
src/lib/apis/configs/: index.ts
src/lib/components/: AddToolServerModal.svelte  OnBoarding.svelte
src/lib/i18n/: index.ts
src/routes/: +layout.svelte
src/routes/auth/: +page.svelte
static/static/: custom.css
static/themes/: mangaba.css
(+101 files in other folders)
