[package]
name = "mangaba-ai"
version = "0.9.6"
description = "Mangaba AI Desktop"
authors = ["Mangaba AI"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "mangaba_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mangaba-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
